--- a/style.css
+++ b/style.css
@@ -75,7 +75,8 @@ header {
 /* Main */
 .main-content {
     font-family: Arial, Helvetica, sans-serif;
-    padding: 40px;
+    padding: 50px;
+    line-height: 1.5em;
 }
 
 .main-content h2,h1 {
@@ -228,6 +229,7 @@ td:first-child {
 label {
     display: block; 
     margin: 15px 15px 0 15px; /* top, right, bottom, left */
+    font-weight: bold;
 }
 
 input, textarea {
@@ -235,10 +237,13 @@ input, textarea {
     margin: 0 15px 0 15px;
 }
 
+
 input[type="radio"] { 
     width: 20px;
-    margin: 0 0 0 15px;
+    margin: 0 0 0 5px;
 }
+
+
 
 input[type="submit"] {
     display: block; 
@@ -255,6 +260,8 @@ input[type="submit"] {
 input:focus {
     background-color: gray;
 }
+
+
 
 .legend {
     text-transform: uppercase;
@@ -273,7 +280,22 @@ input:focus {
     margin-bottom: 40px;
 }
 
-.selectmenu .select {
-    padding-right: 100px;
+fieldset{
+    border:2px solid #9ed034;
 }
+
+.option_cliff{
+    width:170px;
+    text-align: center;
+}
+
+.radios span{
+    font-weight: 200;
+}
+
+
+
+
+
+
 
