--- a/style.css
+++ b/style.css
@@ -183,16 +183,18 @@ footer #nondisclaimer .social .fa-instagram {
 }
 
 /* Activities */
-table {
+
+table.activities_class {
     width: 1000px;
     margin: 4em auto 4em auto;
 }
 
-table, caption, th, td {
+table.activities_class table, caption, th, td {
     border: 2px solid #852B1B;
 }
 
-caption {
+
+table.activities_class caption {
     background: #852B1B;
     height: 40px; 
     color: #fff; 
@@ -201,33 +203,36 @@ caption {
     padding-top: 1em;
 }
 
-thead {
+
+table.activities_class thead {
     background: #BDE1FF;
 }
 
-tbody {
+table.activities_class tbody {
     background: #EEFFE6;
     text-align: center;
 }
 
-th,td {
+
+table.activities_class th,td {
     width: 225px;
     height: 75px;
     vertical-align: middle;
     border: solid 1px #852B1B; 
 }
 
-th:first-child {
+table.activities_class th:first-child {
     width: 250px; 
     height: 50px;
     background: #4977D1;
     color: #fff
 }
 
-td:first-child {
+table.activities_class td:first-child {
     font-weight: bold;
     background: #BDE1FF;
 }
+
 
 /* Contact */
 
@@ -295,6 +300,36 @@ fieldset{
 .radios span{
     font-weight: 200;
 }
+
+/* cliff pages table */
+
+table.cliff_class {
+    width: 1500px;
+    margin: 4em auto 4em auto;
+    border: none;
+}
+
+table.cliff_class th{
+    background: #852B1B;
+    color: #fff; 
+    font-size: 1.3em;
+    font-weight: bold;
+    padding:15px 0px 15px 0px;
+    text-align:center;
+}
+
+table.cliff_class td{
+    border: none
+}
+
+.cliff_images{
+    width:100%; 
+    padding-bottom: 30px;
+    border: none
+}
+
+
+
 
 
 
