--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ table.cliff_class {
     margin: 4em auto 4em auto;
     border: none;
     border-collapse: separate;
-    border-spacing: 30px;
+    border-spacing: 30px 0px;
 }
 
 table.cliff_class th{
