--- a/style.css
+++ b/style.css
@@ -259,10 +259,10 @@ input[type="submit"] {
     display: block; 
     margin: 20px 0 10px 0;
     width: 100px;
-    background-color: #4977D1; 
+    /*background-color: #4977D1; */
     border: 0px;
     color: #ffffff; 
-    padding: 5px;
+    padding: 10px 30px;
     font-weight: bold;
     margin: 15px 15px 0 320px;
 }
@@ -365,6 +365,8 @@ h4 {
     opacity: 0.7;
 }
 
+/* Clock */
+
 #timeofday span {
     font-weight: normal;
     color: #3a3a3a;
@@ -374,9 +376,11 @@ h4 {
     color: #125688
 }
 
+/* Random code */
+
 .randomcode input{
     width: 150px;
-    margin: 15px 15px 0 15px;
+    margin: 10px 0px 0px 165px;
     padding: 5px;
 }
 
@@ -384,7 +388,10 @@ h4 {
     background-color: #b3b3b3;
     padding: 10px;
     display:inline;
+    font-size: 12px;
 }
+
+
 
 
 
