--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ header {
 .main-menu {
     margin-left: 227px;
     font-weight: 400;
-    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .main-menu ul li {
@@ -430,20 +429,39 @@ h4 {
 }
 
 
+/* Navigation Hamburger*/
 
+.navbar {
+    font-weight: 400;
+}
 
+#navbarContent .navbar-nav .nav-link {
+    list-style-type: none;
+    display: inline-block;
+    float: left;
+    padding-left: 25px;
+    padding-right: 25px;  
+    border-left: 1px solid rgba(202,204,202,0.6);
+    line-height: 100px; 
+    text-decoration: uppercase;
+    font-size: 14px;
+    text-transform: uppercase;
+}
 
+#navbarContent .navbar-nav .nav-link a {
+    text-decoration: none;
+    color: #888;
+}
 
+.navbar ul li.active {
+   background: #9ed034;
+   border: none;
+}
 
+.navbar-nav li a:hover {
+    color: #9ed034 !important;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.navbar li.active a {
+    color: #fff !important;
+}
