--- a/style.css
+++ b/style.css
@@ -1,26 +1,21 @@
 /* Desktop devices */
-@media (min-width: 1200px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl {
-        max-width: 700px;
-    }
-}
 
 @media (min-width: 992px) {
-    .container, .container-lg, .container-md, .container-sm {
-        max-width: 700px !important;
-    }
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+        max-width: 700px;
+    } 
 }
 
-@media  (max-width:768px){ 
-    .flex {
-        flex-direction: column !important;
-    }
+
+
+@media  (max-width:992px){ 
     #navbarContent .navbar-nav .nav-link {
         line-height: 50px !important;
     }
+    .section_cliff{
+        flex-wrap: wrap;
 }
-
-
+}
 
 /* Header */
 header {
@@ -49,8 +44,11 @@ header {
 
 #cliff header {
     background: no-repeat lightgray url(images/forest_cliff.jpg);
-    background-size: 1500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
+
 
 .main-header {
     background-color:rgba(255, 255, 255, 0.8);
@@ -115,6 +113,10 @@ header {
 
 }
 
+.main-content p {
+    padding: 0 25%;
+}
+
 Span:first-child {
     font-weight: bold;
 }
@@ -149,6 +151,7 @@ section #partners .partner img{
     width: 100%;
     max-height: 90px;
 }
+
 
 /* Footer */
 footer {
@@ -353,13 +356,10 @@ table.cliff_class td{
 
 .section_cliff{
     display:flex;
-    flex-wrap: wrap;
     justify-content: center;
-    max-width: 1500px;
 }
 
 .block_cliff {
-    display:block;
     padding: 15px;
 }   
 
