--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
 }
 
 #home header {
-    height: 50vh;
+    height: 40vh;
     background: lightgrey url(images/cliff_ocean.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,7 +37,7 @@ header {
 }
 
 #activities header {
-    height: 50vh;
+    height: 40vh;
     background: lightgray url(images/runfly.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,7 +45,7 @@ header {
 }
 
 #contact header {
-    height: 50vh;
+    height: 40vh;
     background:lightgray url(images/cliff_rock.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -53,7 +53,7 @@ header {
 }
 
 #cliff header {
-    height: 50vh;
+    height: 40vh;
     background: lightgray url(images/forest_cliff.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -468,9 +468,16 @@ h4 {
 /* Navigation Hamburger*/
 
 .container {
-    background-color:rgba(255, 255, 255, 0.8);
+    background-color:rgba(38, 41, 61, 0.7) !important;
     font-weight: 400;
+    opacity: 90%;
+    text-align: center;
 }
+
+.container .bg-transparent{
+    background-color: rgba (38,41,61,0.7)!important;
+}
+
 
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
     padding-right: 15px;
@@ -548,4 +555,16 @@ H2 {
 h4 {
     padding-bottom: 20px;
     text-align: center;
+}
+
+.container .fixed-top {
+    position: fixed;
+    top: 0;
+    z-index: 1030;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.btn {
+    margin: 1% 28% !important; 
 }
