--- a/style.css
+++ b/style.css
@@ -328,11 +328,11 @@ input:focus {
     padding-left: 100px;
 }
 
-.form {
+.form-group {
     margin-top: 20px;
     margin-bottom: 40px;
-    margin-left: 25%;
-    width:50%;
+    margin-right: 10%;
+    min-width:50%;
 }
 
 fieldset{
@@ -573,6 +573,10 @@ h4 {
     margin: 0 auto;
 }
 
-.btn {
-    margin: 1% 25% !important; 
+.btn{
+    margin: 1% 15%; 
+}
+
+.randomcode {
+    margin: 0 auto;
 }
